--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "electron": "^1.4.1"
   },
   "dependencies": {
-    "electron-positioner": "^3.0.0"
+    "electron-positioner": "^3.0.0",
+    "os": "^0.1.1"
   }
 }
